# vima

./: .env.example  .gitignore  .railwayignore  AGENTS.md  CLAUDE.md  DESIGN.md  README.md  docs.json  railway.toml
backend/: ab_eval.py  answer_from_memory.py  api.py  bounty_demo_driver.py  bounty_server.py  chat_memory.py  cloud_loader.py  demo.py  depth_memory.py  episodic_memory.py  eval_memory.py  event_memory.py  export_artifacts.py  gemini_robotics_boxes.py  inference_context.py  judge.py  mask_track_memory.py  merge_robotics_boxes.py  pipeline.py  prompt_v1.py  pyproject.toml  qwen_frame_qa.py  raffle.py  requirements-solana.txt  solana_payout.py  spatial_demo.py  spatial_judge.py  temporal-reference.json  temporal_v1.py  vima_cli.py  yolodex_memory.py
backend/scripts/: precompute_inference.py
backend/tests/: test_infra_packaging.py  test_prompt_v1.py  test_temporal_v1.py
configs/: eval_questions.json
dashboard/: README.md  app.js  index.html  styles.css
demo/: ab_comparison.json  ab_eval.py  answer_from_memory.py  depth_memory.py  depth_track_memory.json  episodic_memory.json  episodic_memory.py  event_memory.py  event_timeline.json  gemini_robotics_boxes.json  gemini_robotics_boxes.py  mask_track_memory.json  mask_track_memory.py  memory_answer.json  memory_answer_gemini.json  memory_retrieval.py  merge_robotics_boxes.py  object_event_memory.json  qwen_answer.json  (+5 more)
tools/yolodex/: config.json  pyproject.toml
tools/yolodex/.agents/skills/eval/scripts/: preview_labels.py
tools/yolodex/.agents/skills/label/scripts/: dispatch.sh  label_gemini.py
(+214 files in other folders)
