[project]
name = "vinna-yolodex"
version = "0.1.0"
description = "Vendored Yolodex collect/label/preview stage for VINNA construction object memory"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "yt-dlp>=2024.1.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "google-generativeai>=0.5.0",
    "torch>=2.11.0",
    "transformers>=5.6.2",
]

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
